# metapackage

./: metapackage.cabal
exe/: metapackage.hs
lib/Application/MetaPackage/: Build.hs  Command.hs  Config.hs  Job.hs  ProgType.hs  Type.hs
src/: Driver.hs  MetaPackage.hs  OldMetaPackage.hs  makehoodle.hs  makepipeline.hs  metapackage.hs
template/: Paths_xxx.hs.st  project.cabal.st
trash/: Command.hs  Job.hs
