Name:		metapackage
Version:	0.1
Synopsis:	
Description: 	
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     
                template/Setup.lhs
                template/project.cabal.st
          

Executable metapackage
  Main-is: metapackage.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, metapackage

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs >= 0.7 && < 0.10, 
                   devadmin == 0.4.*, 
                   Cabal >= 1.8 && < 1.12, 
                   configurator == 0.2.*,
                   containers == 0.4.*, 
                   process == 1.0.*, 
                   HStringTemplate == 0.6.*, 
                   HStringTemplateHelpersIW == 0.0.*
  Exposed-Modules: 
                   Application.MetaPackage.ProgType
                   Application.MetaPackage.Job
                   Application.MetaPackage.Command
                   Application.MetaPackage.Config 
                   Application.MetaPackage.Build
  Other-Modules: 
                   Paths_metapackage

 
		 