Name:		metapackage
Version:	0.1.2
Synopsis:	umbrella package creation for ease of development
Description: 	Make a meta package consisting of multiple packages using 
                symbolic links for easier and faster compilation in
                development
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     
                template/Setup.lhs
                template/project.cabal.st
                template/Paths_xxx.hs.st
          

Executable metapackage
  Main-is: metapackage.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, metapackage

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs >= 0.7 && < 0.10, 
                   devadmin >= 0.4.0.999 && < 0.5,  
                   Cabal >= 1.8 && < 1.12, 
                   configurator == 0.2.*,
                   containers == 0.4.*, 
                   process == 1.0.*, 
                   HStringTemplate == 0.6.*, 
                   HStringTemplateHelpersIW == 0.0.*
  Exposed-Modules: 
                   Application.MetaPackage.ProgType
                   Application.MetaPackage.Job
                   Application.MetaPackage.Command
                   Application.MetaPackage.Config 
                   Application.MetaPackage.Build
  Other-Modules: 
                   Paths_metapackage

 
		 