Name:		metapackage
Version:	0.1.2.0
Synopsis:	umbrella package creation for ease of development
Description: 	Make a meta package consisting of multiple packages using 
                symbolic links for easier and faster compilation in
                development
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     
                template/Setup.lhs
                template/project.cabal.st
                template/Paths_xxx.hs.st
          

Executable metapackage
  Main-is: metapackage.hs
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base == 4.*, 
                   mtl>2, 
                   directory,
                   filepath,
                   -- cmdargs,
                   devadmin,  
                   Cabal, 
                   -- configurator,
                   containers, 
                   process, 
                   HStringTemplate 

  Other-modules: 
                   Paths_metapackage
 
		 